--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <title>Simple HTML Page</title>
 </head>
 <body>
+  <a href="index.html">Home</a><br>
+  <a href="about.html">About Me</a><br>
   <h1>Welcome to My Simple Page</h1>
-  <p>This is a basic HTML file with a heading, paragraph, and a button.</p>
+  <p>This is a basic HTML file for fun</p>
   <button onclick="alert('Hello from the button!')">Click Me</button>
 </body>
 </html>
